--- a/views/base.jade
+++ b/views/base.jade
@@ -16,4 +16,4 @@ html(lang='en')
 		//- Scripts
 		script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
 		script(type='text/javascript', src='http://192.168.1.10/socket.io.js')
-		script(type='text/javascript', src='http://192.168.1.10:3000/static/js/notifier.js')
+		script(type='text/javascript', src='/static/js/notifier.js')
