fix problem port on express and socket.io

--- a/views/base.jade
+++ b/views/base.jade
@@ -15,5 +15,5 @@ html(lang='en')
 			block content
 		//- Scripts
 		script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
-		script(type='text/javascript', src='http://192.168.1.10/socket.io.js')
+		script(type='text/javascript', src='http://127.0.0.1:3000/socket.io/socket.io.js')
 		script(type='text/javascript', src='/static/js/notifier.js')
