--- a/views/base.jade
+++ b/views/base.jade
@@ -4,8 +4,8 @@ html(lang='en')
 		meta(charset='utf-8')
 		title='Pizarron de noticias'
 		link(rel='shortcut icon', href='static/img/postit.png')
-		link(rel='stylesheet', type='text/css' , href='static/css/normalize.css')
-		link(rel='stylesheet', type='text/css' , href='static/css/base.css')
+		link(rel='stylesheet', type='text/css' , href='/static/css/normalize.css')
+		link(rel='stylesheet', type='text/css' , href='/static/css/base.css')
 		link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Reenie+Beanie')
 		block extrastyle
 	body
@@ -15,5 +15,5 @@ html(lang='en')
 			block content
 		//- Scripts
 		script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
-		script(type='text/javascript', src='http://127.0.0.1:3000/socket.io/socket.io.js')
+		script(type='text/javascript', src='http://postit.herokuapp.com/socket.io/socket.io.js')
 		script(type='text/javascript', src='/static/js/notifier.js')
