refactoring new post method

--- a/views/post_create.jade
+++ b/views/post_create.jade
@@ -1,7 +1,7 @@
 extends base
 block content
 	div
-		form#form-new-post(method='post', action='/post/')
+		form#form-post(method='post', action='/post')
 			label(for='title') Titulo
 			input#title(type='text', name='title')
 			label(for='content') Contenido
