--- a/views/base.jade
+++ b/views/base.jade
@@ -14,6 +14,6 @@ html(lang='en')
 		section
 			block content
 		//- Scripts
-		script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
-		script(type='text/javascript', src='http://postit.herokuapp.com/socket.io/socket.io.js')
+		script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js')
+		script(type='text/javascript', src='/socket.io/socket.io.js')
 		script(type='text/javascript', src='/static/js/notifier.js')
