--- a/views/home.jade
+++ b/views/home.jade
@@ -7,6 +7,7 @@ block content
 					h2.title #{ post.title }
 					p.content #{ post.content }
 					i.author #{ post.author }
-					//- i.date #{ post.date }
+					br
+					i.date #{ post.created.toDateString() }
 		else
-			p No hay datos
+			p No data found
