change reference in notifier.js to /

--- a/views/base.jade
+++ b/views/base.jade
@@ -10,7 +10,7 @@ html(lang='en')
 		block extrastyle
 	body
 		header
-			h1 Pizarron de noticias
+			h1 Postit App
 		section
 			block content
 		//- Scripts
