removed unused templates and controllers

--- a/views/base.jade
+++ b/views/base.jade
@@ -2,7 +2,7 @@ doctype 5
 html(lang='en')
 	head
 		meta(charset='utf-8')
-		title='Pizarron de noticias'
+		title='Postit'
 		link(rel='shortcut icon', href='static/img/postit.png')
 		link(rel='stylesheet', type='text/css' , href='/static/css/normalize.css')
 		link(rel='stylesheet', type='text/css' , href='/static/css/base.css')
