--- a/views/home.jade
+++ b/views/home.jade
@@ -11,3 +11,10 @@ block content
 					i.date #{ post.created.toDateString() }
 		else
 			p No data found
+	div
+		form#form-post(method='post', action='/post')
+			label(for='title') Titulo
+			input#title(type='text', name='title')
+			label(for='content') Contenido
+			textarea#content(name='content')
+			input#save-post-btn.btn(type='submit', value='Post')
