--- a/views/base.jade
+++ b/views/base.jade
@@ -4,16 +4,18 @@ html(lang='en')
 		meta(charset='utf-8')
 		title='Postit'
 		link(rel='shortcut icon', href='static/img/postit.png')
-		link(rel='stylesheet', type='text/css' , href='/static/css/normalize.css')
+		link(rel='stylesheet', type='text/css' , href='/static/css/bootstrap.min.css')
 		link(rel='stylesheet', type='text/css' , href='/static/css/base.css')
 		link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Reenie+Beanie')
 		block extrastyle
 	body
 		header
-			h1 Postit App
+			block header
+				h1 Postit App
 		section
 			block content
 		//- Scripts
 		script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js')
+		script(type='text/javascript', src='/static/js/bootstrap.min.js')
 		script(type='text/javascript', src='/socket.io/socket.io.js')
 		script(type='text/javascript', src='/static/js/notifier.js')
