added forkme button and twitter link

--- a/views/base.jade
+++ b/views/base.jade
@@ -9,6 +9,8 @@ html(lang='en')
 		link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Reenie+Beanie')
 		block extrastyle
 	body
+		a(href="https://github.com/erickxls/postit")
+			img(src='https://s3.amazonaws.com/github/ribbons/forkme_left_green_007200.png', alt='Fork me on Github', style='position: absolute; top: 0; left: 0; border: 0;')
 		header
 			block header
 				h1 Postit App
