--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,9 @@ h1{
 	text-align: center;
 	text-shadow: 0.1em 0.1em 0.1em rgba(0,0,0,0.2);
 }
+h1 a {
+	font-size: 0.5em;
+}
 h2{
 	font-size: 1.5em;
 }
