--- a/views/home.jade
+++ b/views/home.jade
@@ -1,6 +1,7 @@
 extends base
 block header
-	h1 Postit App
+	h1 Postit
+		a(href='https://twitter.com/erickxls')  @erickxls
 	span.pull-right
 		button.btn.btn-success(data-toggle='modal', data-target='#new-post')
 			i.icon-plus
