changed delete icon

--- a/views/home.jade
+++ b/views/home.jade
@@ -12,7 +12,7 @@ block content
 				li.postit
 					span.pull-right
 						a(href='#', data-pk='#{ post._id }')
-							i.icon-trash
+							i.icon-remove
 					h2.title #{ post.title }
 					p.content #{ post.content }
 					i.author #{ post.author }
